--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,118 +1,156 @@
 <% layout('layouts/boilerplate.ejs') %>
 
+    <section class="container homepage-about">
+        <div class="header"> About Us </div>
+        <div class="details">
+
+            <div> 
+                Based in the vibrant heart of Vietnam, VET STORE is your premier destination for all things
+                electric scooters. Established in 2022, we are proud to be the largest electric scooter distributor in
+                Vietnam, offering a wide range of the latest electric scooters, high-quality accessories, and top-notch
+                related services.
+            </div>
 
 
-<section class="homepage-collage">
-    <h2>SHINE WITH US! SHARE WITH US!</h2>
-    <h5>#VETSCOOTER</h5>
-    <div class="rows">
-        <div class="column">
-
-            <img class="img-fluid"
-            src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/353634586_647229977458623_466531448942366686_n_x4totj.jpg"
-            alt="">
-
-
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1634886313120-c8bfa8e84205?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1976&q=80"
-                alt="">
-                <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1623207831300-8915dd80afd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nzl8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
-                alt="">
-                
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1547619292-8816ee7cdd50?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzl8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
-                alt="">
-        </div>
-
-        <div class="column">
-
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1621222667887-c1112e53abb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjZ8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
-                alt="">
+            <div>
+                At VET STORE, we're not just a store; we're a passionate team of scooter enthusiasts on a
+                mission to make your electric scooter experience the best it can be. Whether you're a seasoned rider or
+                a newbie to the electric scooter world, we've got everything you need to enhance your rides and keep you
+                on the move.
+            </div>
 
             
+            <div>
+                Explore our carefully curated selection of electric scooters and accessories, and experience the
+                convenience, style, and sustainability that electric scooters have to offer. With our unwavering
+                commitment to quality and customer satisfaction, we're here to support your every electric scooter
+                adventure.
+            </div>
 
-            <img class="img-fluid"
-                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/352259967_647074894140798_2679470760555749392_n_xnxlf3.jpg"
-                alt="">
 
-        
+            <div>
+                Thank you for choosing VET STORE as your go-to source for all things electric scooters. Get
+                ready to ride in style and eco-friendly fashion. Happy shopping!
+            </div>
+
+
+        </div>
+
+
+    </section>
+
+
+    <section class="homepage-collage">
+        <h2>SHINE WITH US! SHARE WITH US!</h2>
+        <h5>#VETSCOOTER</h5>
+        <div class="rows">
+            <div class="column">
+
                 <img class="img-fluid"
-                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/353044873_647229930791961_2922392357882283381_n_nculay.jpg"
-                alt="">
-            
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1559585198-8c2694b5d132?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80"
-                alt="">
+                    src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/353634586_647229977458623_466531448942366686_n_x4totj.jpg"
+                    alt="">
 
-        </div>
-        <div class="column">
 
-            <img class="img-fluid"
-                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/353448065_647229844125303_7000364137639364842_n_yrqw5u.jpg"
-                alt="">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1634886313120-c8bfa8e84205?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1976&q=80"
+                    alt="">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1623207831300-8915dd80afd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nzl8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
+                    alt="">
 
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1621222614114-93839e174338?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                alt="">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1547619292-8816ee7cdd50?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzl8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
+                    alt="">
+            </div>
 
-            <img class="img-fluid"
-                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/logo_wkxok6.jpg"
-                alt="">
+            <div class="column">
 
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1558681513-375e8e81b6de?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
-                alt="">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1621222667887-c1112e53abb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjZ8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
+                    alt="">
 
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1628735991816-c45f2ff1e741?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                alt="">
-        </div>
-        <div class="column">
 
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1599940036426-617d1763eb94?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDN8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
-                alt="">
 
-            <!-- <img class="img-fluid"
+                <img class="img-fluid"
+                    src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/352259967_647074894140798_2679470760555749392_n_xnxlf3.jpg"
+                    alt="">
+
+
+                <img class="img-fluid"
+                    src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/353044873_647229930791961_2922392357882283381_n_nculay.jpg"
+                    alt="">
+
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1559585198-8c2694b5d132?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80"
+                    alt="">
+
+            </div>
+            <div class="column">
+
+                <img class="img-fluid"
+                    src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/353448065_647229844125303_7000364137639364842_n_yrqw5u.jpg"
+                    alt="">
+
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1621222614114-93839e174338?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                    alt="">
+
+                <img class="img-fluid"
+                    src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/logo_wkxok6.jpg"
+                    alt="">
+
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1558681513-375e8e81b6de?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
+                    alt="">
+
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1628735991816-c45f2ff1e741?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                    alt="">
+            </div>
+            <div class="column">
+
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1599940036426-617d1763eb94?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDN8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
+                    alt="">
+
+                <!-- <img class="img-fluid"
                 src="https://scontent.fhan3-2.fna.fbcdn.net/v/t39.30808-6/363412452_674059808108973_6742682707231957549_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5614bc&_nc_ohc=hZkcNqT7lBQAX94dYyV&_nc_ht=scontent.fhan3-2.fna&oh=00_AfAxKvfwVCrA3T5LvSYhmLBrbHeQpOpAKxapTG0WvJ241Q&oe=64FE9329"
                 alt=""> -->
 
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1559585198-8c2694b5d132?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80"
-                alt="">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1559585198-8c2694b5d132?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80"
+                    alt="">
 
-            <img class="img-fluid"
-                src="https://plus.unsplash.com/premium_photo-1681486795901-78849e196ced?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80"
-                alt="">
-
-           
+                <img class="img-fluid"
+                    src="https://plus.unsplash.com/premium_photo-1681486795901-78849e196ced?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80"
+                    alt="">
 
 
-        </div>
 
-        <div class="column">
-            <!-- <img class="img-fluid"
+
+            </div>
+
+            <div class="column">
+                <!-- <img class="img-fluid"
                 src="https://scontent.fhan3-5.fna.fbcdn.net/v/t39.30808-6/365952026_677018477813106_8072149529782576872_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=49d041&_nc_ohc=Sy8colW22MUAX_FyqBI&_nc_ht=scontent.fhan3-5.fna&oh=00_AfDe79XPdo3PYCKuyznjvbTNRQIUzbM-VBWFPdaQINWBoQ&oe=64FFAEED"
                 alt=""> -->
 
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1589308454676-06c69786e24c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1935&q=80"
-                alt="">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1589308454676-06c69786e24c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1935&q=80"
+                    alt="">
 
-                
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1597260491590-7a542ff29bdd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1852&q=80"
-                alt="">
 
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1614226170075-d338afcd9c53?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1780&q=80"
-                alt="">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1597260491590-7a542ff29bdd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1852&q=80"
+                    alt="">
 
-        </div>
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1614226170075-d338afcd9c53?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1780&q=80"
+                    alt="">
 
-        <!-- <div class="column">
+            </div>
+
+            <!-- <div class="column">
 
             <img class="img-fluid"
                 src="https://scontent.fhan3-2.fna.fbcdn.net/v/t39.30808-6/351124687_284948137328696_5167229641952609579_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=49d041&_nc_ohc=JB5awu45T2gAX_IDtYa&_nc_ht=scontent.fhan3-2.fna&oh=00_AfAOTOW7NKQlyGxGDN4jh7jCYdbhvGA-uHAHewok9eq7fA&oe=65000861"
@@ -168,6 +206,5 @@
 
 
 
-    </div>
-</section>
-
+        </div>
+    </section>
