--- a/public/css/app.css
+++ b/public/css/app.css
@@ -155,7 +155,19 @@ body {
 .homepage-our-products .title {
     text-align: center;
 }
+.homepage-our-products .title h1{
+    font-weight: bold;
+}
 
+.homepage-our-products .title  h5{
+
+    font-weight: bold;
+  line-height: 21px;
+  letter-spacing: 0.35em;
+  text-transform: uppercase;
+  color: #C0C0C0;
+  padding-bottom: 10px;
+}
 
 .homepage-our-products .container {
     padding-left: 5%;
@@ -165,8 +177,14 @@ body {
 .homepage-our-products .container .item {
     /* padding-left: 20px;
     padding-right: 20px; */
-    padding: 25px
+    padding: 20px;
 }
+
+.homepage-our-products .container .product-image img {
+    /* object-fit: contain; */
+    padding: 10px;
+}
+
 
 .homepage-our-products .all-products {
     padding: 40px;
@@ -180,6 +198,68 @@ body {
 
 
 }
+
+/* .homepage-our-products .card .product-details{
+    padding-bottom: 20px;
+} */
+
+.homepage-our-products .card .icons {
+    display: flex;
+    font-size: 10px;
+}
+
+.homepage-our-products .card .icons .speed {
+    display: flex;
+    align-items: center;
+    padding-right: 10px;
+}
+
+
+.homepage-our-products .card .icons .speed span,
+.homepage-our-products .card .icons .distance span {
+    padding-left: 5px;
+}
+
+
+
+
+.homepage-our-products .card .icons .distance {
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+
+}
+
+.homepage-our-products .card .icons img {
+    width: 30px;
+    height: 30px;
+}
+
+.homepage-our-products .card .shipping {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+}
+
+.homepage-our-products .card .shipping img {
+    width: 30px;
+    height: 30px;
+}
+
+.homepage-our-products .card .product-model {
+    font-size: 16px;
+    font-weight: bold;
+
+}
+
+.homepage-our-products .card .price {
+    font-weight: bold;
+    color: #fc3828;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+
 
 
 /* Hover + shadow effects for cards */
@@ -212,11 +292,13 @@ body {
 
 /* Slick arrows and dots */
 .homepage-our-products .slick-next {
-    right: 55px;
+    /* right: 55px; */
+    right: 20px;
 }
 
 .homepage-our-products .slick-prev {
-    left: 26px;
+    /* left: 26px; */
+    left: -10px;
 }
 
 .homepage-our-products .slick-prev::before,
@@ -1277,6 +1359,9 @@ body {
     /* /************  HOME PAGE ************/
 
     /* Hero page */
+    .homepage-hero .container-fluid{
+        padding: 0;
+    }
     .homepage-hero .body {
         position: absolute;
         top: 0;
@@ -1338,27 +1423,23 @@ height: 50%; */
 
     }
 
+/* Product list */
 
-    .homepage-products-preview {
-        background-color: white;
-        margin-top: 0;
-        padding: 3%;
+.homepage-our-products .title {
+    text-align: center;
+    font-weight: bold;
+}
+
+
+
+
+    /* Our Own Testing */
+
+    .homepage-our-testing .icons-text {
+        position: relative;
     }
 
-    .homepage-products-preview .card {
-        display: flex !important;
-        flex-direction: row !important;
-        align-items: center !important;
-
-    }
-
-
-    .homepage-products-preview .card-img-container {
-        width: 40%;
-
-    }
-
-
+    
 
     /* Show: Mukuta 10 plus */
     .product-details-lights .text {}
@@ -1409,6 +1490,9 @@ height: 50%; */
         border-radius: 0;
 
     }
+
+
+
 }
 
 @media (max-width: 640px) {
@@ -1476,34 +1560,31 @@ height: 50%; */
 
     }
 
-    /* Products list */
-    .homepage-products-preview .m-1 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        padding-bottom: 10%;
-        /* Adjust the percentage as needed */
+    /* OUR OWN TESTING */
 
-        &::before {
-            content: "";
-            width: 50%;
-            /* Adjust the width as needed */
-            height: 1px;
-            /* Border height */
-            background-color: gray;
-            /* Border color */
-            position: absolute;
-            bottom: 0;
-        }
-
-
+    .homepage-our-testing .icons-text div {
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
+
+    .homepage-our-testing .video-text .text .title {
+        font-size: 40px;
+        font-weight: 800;
+    
+    }
+
+
+
+
+
+
 
     .homepage-products-preview .card-img-container {
         width: 65%
     }
+
+
+
 
 
     /* Partners */
@@ -1768,6 +1849,21 @@ height: 50%; */
     .homepage-products-preview .card-img-container {
         width: 65%
     }
+
+
+
+  /* OUR OWN TESTING */
+
+  .homepage-our-testing{
+    padding-bottom: 30px;
+  }
+
+  .homepage-our-testing .icons-text  {
+    padding:10px;
+    
+}
+
+
 
 
     /* Partners */
