--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1560,6 +1560,14 @@ height: 50%; */
 
     }
 
+
+/* OUR PRODUCTS */
+
+.homepage-our-products .item:hover .card {
+    transform: none;
+    transition: none;
+}
+
     /* OUR OWN TESTING */
 
     .homepage-our-testing .icons-text div {
@@ -1574,7 +1582,10 @@ height: 50%; */
     }
 
 
-
+    .homepage-our-testing .icons-text .card-wrapper:hover .card {
+        transform: none;
+        transition: none;
+    }
 
 
 
