--- a/views/products/home.ejs
+++ b/views/products/home.ejs
@@ -37,25 +37,25 @@
                     <div class="col-12 col-md-3 each-logo">
                         <div class="logo"><img
                                 src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/try_mgll02.png"
-                                alt=""></div>
+                                alt="logo"></div>
                         <div class="text">Try an escooter before you buy it</div>
                     </div>
                     <div class="col-12 col-md-3 each-logo">
                         <div class="logo"><img
-                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/ship_ldlj5r.png"
-                                alt=""></div>
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/why-us/ship_ldlj5r.png"
+                                alt="ship"></div>
                         <div class="text">We ship on the day of your order</div>
                     </div>
                     <div class="col-12 col-md-3 each-logo">
                         <div class="logo"><img
                                 src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/charity_d3hkkv.png"
-                                alt=""></div>
+                                alt="good"></div>
                         <div class="text">Your purchase will help us to do good things</div>
                     </div>
                     <div class="col-12 col-md-3 each-logo">
                         <div class="logo"><img
                                 src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/care_jtwart.png"
-                                alt=""></div>
+                                alt="vet-care"></div>
                         <div class="text">Vet Care will take care of your escooter</div>
                     </div>
                 </div>
@@ -147,8 +147,10 @@
         <div class="container video-icons-text">
             <div class="row video-text">
                 <div class="col-md-6 video">
-                    <iframe
-                        src="https://www.youtube.com/embed/N6-pPxDq_DY?autoplay=1&mute=1&controls=0&loop=1"></iframe>
+                    <!-- <iframe
+                        src="https://www.youtube.com/embed/N6-pPxDq_DY?autoplay=1&mute=1&controls=0&loop=1"></iframe> -->
+
+                        <video src="https://res.cloudinary.com/dashjv0yt/video/upload/v1697265772/VetStore/homepage/our-own-testing/V%E1%BB%86T_Review_Quick_Wheel_Whale_1_gqvkvw.mp4" autoplay muted loop></video>
 
 
 
